resources/css/theme.css
@import '../../vendor/filament/filament/resources/css/theme.css';
@import './hljs-dark.css';
@import './hljs-light.css';

@source '../../src';
@source '../../resources';
@source inline("dark:flex max-w-[14rem]");

.button-send-test svg {
  position: relative;
  top: -2px;
  transform: rotate(-40deg);
}

.filament-peek-panel-body iframe {
  @apply rounded bg-white;
}

.fi-fo-code-editor .cm-editor {
  height: 30rem;
}

.fi-fo-field-wrp-helper-text {
  @apply text-xs text-slate-500 pl-2;
}

